[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/Character.gd" type="Script" id=1]
[ext_resource path="res://characters/Debug.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 30.0

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = null

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 29.4885 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 3
script = null

[node name="Timers" type="Node" parent="."]
script = null

[node name="TechTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true
script = null

[node name="JumpTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.03
one_shot = true
script = null

[node name="CayoteTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.05
one_shot = true
script = null

[node name="LandingTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.1
one_shot = true
script = null

[node name="DashTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.3
one_shot = true
script = null

[node name="HitstunTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true
script = null

[node name="ShieldTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true
script = null

[node name="debug" type="CanvasLayer" parent="."]
script = null

[node name="Control" type="Control" parent="debug"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disp" type="VBoxContainer" parent="debug/Control"]
margin_right = 40.0
margin_bottom = 40.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="debug/Control/Disp"]
margin_right = 40.0
margin_bottom = 14.0
text = "state"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Facing" type="Label" parent="debug/Control/Disp"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
text = "lavel"
script = null
